welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: Invalid literal number
for(i<-1to 10)
       ^Runner:13: error: ')' expected but '}' found.
	}
        ^