welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var i=0
var pas=0
for(i<-1to 10)
{
	while(!estFaceMur)
	{
		avance()
	}
}
